tests/fail/örnek-tekrar.kip
Bir doğruluk ya doğru ya da yanlış olabilir.

(bu doğruluğun) tersi,
  bu doğruysa, yanlış,
  bu yanlışsa, doğrudur.
